Adsense align center fix

--- a/static/css/page.css
+++ b/static/css/page.css
@@ -368,6 +368,7 @@ a.link-code {
 .adsense-content-top {
     margin-left: auto;
     margin-right: auto;
+    width: 730px;
 }
 
 @media (max-width: 159px) {
@@ -379,4 +380,5 @@ a.link-code {
 .adsense-sidebar {
     margin-left: auto;
     margin-right: auto;
+    width: 160px;
 }
